🚧 (frontend) fixed gap bug scrolling

--- a/frontend/src/app/help-page/help-page.component.sass
+++ b/frontend/src/app/help-page/help-page.component.sass
@@ -3,7 +3,7 @@
 :host
     display: flex
     justify-content: center
-    align-items: center
+    align-items: flex-start
     height: inherit
     width: inherit
     background-color: var(--background)
